// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`util/got/index gets 1`] = `
Object {
  "body": Object {},
  "options": Object {
    "baseUrl": "https://api.github.com/",
    "cache": false,
    "decompress": true,
    "followRedirect": true,
    "form": false,
    "hash": "",
    "headers": Object {
      "accept": "application/json",
      "accept-encoding": "gzip, deflate",
      "user-agent": "got/9.6.0 (https://github.com/sindresorhus/got)",
    },
    "hooks": Object {
      "afterResponse": Array [],
      "beforeError": Array [],
      "beforeRedirect": Array [],
      "beforeRequest": Array [],
      "beforeRetry": Array [],
      "init": Array [],
    },
    "hostType": "github",
    "hostname": "api.github.com",
    "href": "https://api.github.com/some",
    "json": true,
    "method": "GET",
    "path": "/some",
    "pathname": "/some",
    "protocol": "https:",
    "retry": Object {
      "errorCodes": Set {},
      "methods": Set {},
      "retries": [Function],
      "statusCodes": Set {},
    },
    "search": "",
    "stream": false,
    "throwHttpErrors": true,
    "useCache": false,
    "useElectronNet": false,
  },
}
`;

exports[`util/got/index gets 2`] = `
Object {
  "body": Object {},
  "options": Object {
    "baseUrl": "https://api.github.com/",
    "cache": false,
    "decompress": true,
    "followRedirect": true,
    "form": false,
    "hash": "",
    "headers": Object {
      "accept": "application/json",
      "accept-encoding": "gzip, deflate",
      "user-agent": "got/9.6.0 (https://github.com/sindresorhus/got)",
    },
    "hooks": Object {
      "afterResponse": Array [],
      "beforeError": Array [],
      "beforeRedirect": Array [],
      "beforeRequest": Array [],
      "beforeRetry": Array [],
      "init": Array [],
    },
    "hostType": "github",
    "hostname": "api.github.com",
    "href": "https://api.github.com/some",
    "json": true,
    "method": "HEAD",
    "path": "/some",
    "pathname": "/some",
    "protocol": "https:",
    "retry": Object {
      "errorCodes": Set {},
      "methods": Set {},
      "retries": [Function],
      "statusCodes": Set {},
    },
    "search": "",
    "stream": false,
    "throwHttpErrors": true,
    "useElectronNet": false,
  },
}
`;
